--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends "modelo.html" %}
+{% block conteudo %}
+    <h1>Olá, mundo!</h1>
+    a href="/sobre-equipe">Proxima Página</a>
+{% endblock %}
